<resources>
    <string name="BtnExit">خروج</string>
    <string name="BtnOpenNetWorkSetting">تنظیمات شبکه</string>
    <string name="BtnLogOutUserYes">بله</string>
    <string name="BtnDialogNewAdvertisement">آگهی جدید</string>
    <string name="BtnRefresh">تلاش مجدد برای ارتباط</string>
    <string name="BtnNoOverrideAds">خیر</string>
    <string name="BtnYesOverrideAds">بله</string>
    <string name="BtnDialogOk">باشه</string>
    <string name="BtnLogOutUserNo">خیر</string>
    <string name="BtnTryToConnect">تلاش مجدد</string>
    <string name="BtnLinkToLogin">حساب کاربری دارید؟وارد شوید.</string>
    <string name="BtnLogin">ورود</string>
    <string name="BtnLinkToRegister">ثبت نام نکرده اید؟ ثبت نام کنید.</string>
    <string name="BtnRegister">ثبت نام</string>
    <string name="BtnOverride">لغو</string>
    <string name="BtnSubmit">ارسال آگهی</string>
    <string name="BtnCategory">انتخاب دسته بندی</string>
    <string name="BtnInsertAdvertisement">ارسال آگهی</string>
    <string name="BtnNavAccount">حساب کاربری</string>
    <string name="BtnNavNewAdvertisement">آگهی جدید</string>
    <string name="BtnNavCategory">دسته بندی ها</string>
    <string name="BtnNavAboutUs">درباره ما</string>
    <string name="BtnNavRules">قوانین</string>
    <string name="BtnNavFaq">تماس با ما</string>
    <string name="ToastTryToConnect">تلاش مجدد برای ارتباط با سرور …</string>
    <string name="ToastSetMobileDataTurnOn">دیتای گوشی را فعال کنید.</string>
    <string name="HintFirstName">نام</string>
    <string name="HintLastName">نام خانوادگی</string>
    <string name="HintEmail">ایمیل</string>
    <string name="HintPhoneNumber">شماره تلفن</string>
    <string name="HintPassword">رمز عبور</string>
    <string name="HintPasswordAgain">تکرار رمز عبور</string>
    <string name="CopyRight">Copy Right © 2017 MHRZ-DEV</string>
    <string name="InfoCallDialog">       اطلاعات تماس\nچنانچه مایل به تماس با اگهی دهنده هستید میتوانید از یکی از روش های زیر استفاده نمایید
</string>
    <string name="HintInsertTitle">عنوان آگهی</string>
    <string name="HintInsertAddress">آدرس</string>
    <string name="HintInsertDescription">توضیحات</string>
    <string name="HintInsertSeller">آگهی دهنده(نام شخص یا شرکت)</string>
    <string name="HintInsertEmail">ایمیل (Example@gmail.com)</string>
    <string name="HintInsertPhoneNumber">شماره تلفن</string>
    <string name="SelectImageAdvertisement1">انتخاب تصویر مناسب برای آگهی</string>
    <string name="SelectImageAdvertisement2">انتخاب تصویر برای آگهی موجب بهتر دیده\n شدن آن میشود.</string>
    <string name="NoSelected">دسته بندی انتخاب نشده!</string>
    <string name="AdvertisementListLoader">در حال بارگذاری اطلاعات</string>
    <string name="TitleUserAds">تمامی آگهی هایی که تا کنون ارسال کرده اید.</string>
    <string name="AboutUsTxt">
        نرم افزار مروارید ابزاری برای تبلیغات و استخدام افراد برای کسب وکار  که بصورت رایگان برای استفاده عموم قرار گرفته است شما میتوانید بصورت نامحدود به ارسال آگهی بپردازید بدون اینکه هزینه ای پرداخت کنید.
</string>
    <string name="emailMHRZ">mhrz.dev@gmail.com محمد هادی رفیعی زاده</string>
    <string name="app_name">مروارید</string>
    <string name="TitleUserLogOut">خروج از حساب کاربری</string>
    <string name="TitleOverrideAds">لغو ارسال آگهی</string>
    <string name="MessageOverrideAds">آیا مایل به لغو ارسال آگهی هستید؟</string>
    <string name="TitleOverrideRegister">لغو ارسال آگهی</string>
    <string name="MessageOverrideRegister">آیا مایل به لغو ارسال آگهی هستید؟</string>
    <string name="MessageUserLogOut">آیا مایل به خروج از حساب کاربری خود میباشید؟</string>
    <string name="InternetErrorTitle">خطا در اتصال </string>
    <string name="InternetErrorMessage">گوشی شما به اینترنت دسترسی ندارد.\n
 لطفا از روشن بودن دیتای گوشی و یا اتصال به شبکه وای فای اطمینان حاصل کنید.                                        </string>
    <string name="title_activity_test">Test</string>
    <string name="PDialogMessageRegistering">در حال بررسی …</string>
    <string name="PDialogMessageInsertData">در حال ارسال آگهی…</string>
    <string name="UserAlreadyExisted">ایمیل شما قبلا ثبت شده است.</string>
    <string name="FailureCreatingImage">خطا در بارگذاری عکس پروفایل!</string>
    <string name="FailureInsertingDatabase">خطا در ارتباط با سرور، مجداد امتحان کنید.</string>
    <string name="FailurePost">خطایی در ارسال اطلاعات رخ داده است مجددا تلاش کنید.</string>
    <string name="FailureConnecting">خطا در اتصال به سرور.</string>
    <string name="action_settings">درباره برنامه</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="ResultInsert_Title">نتیجه ارسال آگهی</string>
    <string name="ResultOfInsertMessageSuccess">آگهی با موفقیت ارسال شد</string>
    <string name="ResultOfInsertMessageFailure">ارسال آگهی با مشکل مواجه شد</string>
    <string name="Str_ShowAds">نمایش اگهی</string>
    <string name="Str_NewAds">درج آگهی</string>
    <string name="Str_Exit">خروج</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="title_activity_show_ads">ShowAds</string>
    <string name="title_activity_show_ads_full">عنوان</string>
    <string name="AboutAppTxt">درباره برنامه</string>
    <string name="InsertAdsEmailTextView">ایمیل</string>
    <string name="InsertAdsEmailEditText">Example@Google.com</string>
    <string name="InsertAdsEmailCheckBox">آدرس ایمیلم را به دیگران نشان نده! </string>
    <string name="InsertAdsImageTitle">انتخاب عکس برای آگهی باعث بهتر دیده شدن ان می شود.</string>
    <string name="InsertAdsCategoryTextView">انتخاب موضوع اگهی</string>
    <string name="InsertAdsSetCategoryTextView">انتخاب نشده</string>
    <string name="InsertAdsImageButton">افزودن عکس</string>
    <string name="next">بعدی</string>
    <string name="skip">رد کردن</string>
    <string name="start">ورود</string>
    <string name="slide_1_title">خوش آمدید!</string>
    <string name="slide_1_desc">به اپلیکشن استخدام و کاریابی مروارید خوش آمدید!</string>
    <string name="slide_2_title">دسترسی سریع</string>
    <string name="slide_2_desc">دسترسی سریع به جدیدترین آگهی‌های استخدام از طریق گوشی موبایل!</string>
    <string name="slide_3_title">ثبت رایگان اگهی استخدام</string>
    <string name="slide_3_desc">شما میتوانید به صورت رایگان آگهی استخدام و یا رزومه خود را ارسال نمایید!</string>
    <string name="slide_4_title">سرعت بالا در بارگذاری</string>
    <string name="slide_4_desc">این امکان را به کاربران میدهد تا از طریق موبایل اخبار و آگهی‌های استخدامی را حتی زمانی که سرعت اینترنت پایین است به سادگی و با سرعت مشاهده کنند.</string>
    <string name="label_category">دسته بندی</string>
    <string name="btn_Back_to_home">صفحه اصلی</string>
    <string name="title_activity_show_all_advertisement">نمایش آگهی ها</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_show_full_advertisement">نمایش آگهی</string>
    <string name="title_activity_insert_advertisement">ثبت آگهی</string>
    <string name="title_activity_show_login" />
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_show_login1">ShowLogin1</string>
    <string name="title_activity_about_pearl">درباره برنامه</string>
    <string name="title_activity_category_list">CategoryList</string>
    <string name="title_activity_insert_advertisement1">InsertAdvertisement1</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>