<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:showIn="@layout/insert_advertisement_content">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignStart="@+id/textView2"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:layout_toLeftOf="@+id/ImageButtonInsertImage"
                android:layout_toStartOf="@+id/ImageButtonInsertImage"
                android:text="@string/SelectImageAdvertisement2"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"
                android:layout_toLeftOf="@+id/ImageButtonInsertImage"
                android:layout_toStartOf="@+id/ImageButtonInsertImage"
                android:text="@string/SelectImageAdvertisement1"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:textStyle="normal|bold" />

            <ImageButton
                android:id="@+id/ImageButtonInsertImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/InsertAdsImageTitle"
                android:onClick="OpenImage"
                android:scaleType="fitXY"
                card_view:srcCompat="@drawable/ic_add_a_photo_blue_grey_700_24dp">

                <requestFocus />
            </ImageButton>
        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/BtnGoToCategoryList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SelectCategory"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/BtnCategory"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:theme="@style/AppTheme.Button.CategoryList" />

            <TextView
                android:id="@+id/TextViewSelectedCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/NoSelected"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:textStyle="normal|bold" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/TxtPadding"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/EditTextColor"
                android:textColorHint="@color/EditTextColor"

                >

                <EditText
                    android:id="@+id/EditTextInsertSeller"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/HintInsertSeller"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textAlignment="center" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/TxtPadding"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/EditTextColor"
                android:textColorHint="@color/EditTextColor"

                >

                <EditText
                    android:id="@+id/EditTextInsertTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/HintInsertTitle"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"


                    android:textAlignment="center" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/TxtPadding"

                android:layout_marginBottom="5dp"
                android:textColor="@color/EditTextColor"
                android:textColorHint="@color/EditTextColor">

                <EditText
                    android:id="@+id/EditTextInsertAddress"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/HintInsertAddress"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"

                    android:textAlignment="center" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/TxtPadding"
                android:layout_marginBottom="5dp"
                android:textColor="@color/EditTextColor"

                android:textColorHint="@color/EditTextColor">

                <EditText
                    android:id="@+id/EditTextInsertEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/HintInsertEmail"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textAlignment="center" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/TxtPadding"
                android:layout_marginBottom="5dp"
                android:textColor="@color/EditTextColor"
                android:textColorHint="@color/EditTextColor">

                <EditText
                    android:id="@+id/EditTextInsertPhoneNumber"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/HintInsertPhoneNumber"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textAlignment="center" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/TxtPadding"
                android:layout_marginBottom="5dp"
                android:textColor="@color/EditTextColor"
                android:textColorHint="@color/EditTextColor">

                <EditText
                    android:id="@+id/EditTextInsertDescription"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="start"
                    android:hint="@string/HintInsertDescription"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:singleLine="false"
                    android:textAlignment="textStart" />
            </android.support.design.widget.TextInputLayout>


        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"

            >

            <Button
                android:id="@+id/BtnOverrideAdvertisement"
                style="@style/AppTheme.Button.Override"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="OverrideAdvertisement"
                android:padding="5dp"
                android:text="@string/BtnOverride"
                android:textSize="15sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/BtnLinkToLogin"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/BtnInsertAdvertisement"
                style="@style/AppTheme.Button.Submit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:onClick="BtnInsertAdvertisement"
                android:padding="5dp"
                android:text="@string/BtnSubmit"
                android:textSize="15sp"
                android:visibility="visible" />


        </LinearLayout>


    </LinearLayout>
</LinearLayout>
