<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="15dp"
        android:text="مروارید"
        android:textAlignment="center"
        android:textColor="@color/YellowLight"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="@drawable/pearl_logo" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:layout_marginBottom="38dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/YellowLight"
            android:textColorHint="@color/YellowLight"

            >

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/HintEmail"
                android:padding="10dp"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/YellowLight" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/YellowLight"
            android:textColorHint="@color/YellowLight">

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/HintPassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/YellowLight" />
        </android.support.design.widget.TextInputLayout>
        <!-- Login Button -->

        <Button
            android:id="@+id/BtnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/YellowLight"
            android:text="@string/BtnLogin" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/BtnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/BtnLinkToRegister"
            android:textColor="@color/White"
            android:textSize="15dp" />
    </LinearLayout>

</RelativeLayout>